--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <applicationurl>https://www.google.com</applicationurl>
         <envi>staging</envi>
         <overwrite.binaries>false</overwrite.binaries>
-        <suiteXmlFile></suiteXmlFile>
+        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -253,9 +253,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                    </suiteXmlFiles>
                     <systemPropertyVariables>
                         <envi>${envi}</envi>
                         <browser>${browser}</browser>
