--- a/pom.xml
+++ b/pom.xml
@@ -238,28 +238,20 @@
     </dependencies>
     <build>
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-                <version>3.7.0</version>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
                     <systemPropertyVariables>
                         <envi>${envi}</envi>
                         <browser>${browser}</browser>
                         <executiontypeweb>${executiontypeweb}</executiontypeweb>
                         <applicationurl>${applicationurl}</applicationurl>
                         <threadCount>${threads}</threadCount>
-                        <parallel>methods</parallel>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
